@@ -84,7 +84,7 @@ public class DocumentService {
     public List<DocumentEntity> getAllDocuments(String agreementId, Predicate<DocumentEntity> documentFilter) {
         List<DocumentEntity> documents = documentRepository.findByAgreementId(agreementId);
         if (!CollectionUtils.isEmpty(documents)) {
-            documents = documents.stream().filter(documentFilter).collect(Collectors.toList());
+            documents = documents.stream().filter(documentFilter).toList();
             documents.forEach(azureStorage::setSecureDocumentUrl);
             return documents;
         }
@@ -136,15 +136,31 @@ public class DocumentService {
             }
         }
 
-        Pattern pDigits = Pattern.compile("[0-9]");
-        Pattern pAlphab = Pattern.compile("[-A-Za-z]");
+        Pattern pDigits = Pattern.compile("\\d"); //[0-9]
+        Pattern pAlphab = Pattern.compile("[A-Za-z]");
+        Pattern spChars = Pattern.compile("^(?=.*\\d)[a-zA-Z0-9][-a-zA-Z0-9]+$");
+        Pattern anyNotNumOrChars = Pattern.compile("^(?=.*[a-zA-Z])(?=.*\\d)[a-zA-Z\\d-]{1,20}$");
 
         try (ByteArrayInputStream contentIs = new ByteArrayInputStream(content)) {
             Stream<CSVRecord> csvRecordStream = CsvUtils.getCsvRecordStream(contentIs);
             if (csvRecordStream.anyMatch(line -> !(pDigits.matcher(line.get(0)).find() //at least one digit
-                                                   && pAlphab.matcher(line.get(0)).find() //at least on alphab. char
+                                                            && pAlphab.matcher(line.get(0)).find() //at least on alphab. char
             ))) {
                 throw new InvalidRequestException(ErrorCodeEnum.BUCKET_CODES_MUST_BE_ALPHANUM_WITH_AT_LEAST_ONE_DIGIT_AND_ONE_CHAR.getValue());
+            }
+        }
+
+        try (ByteArrayInputStream contentIs = new ByteArrayInputStream(content)) {
+            Stream<CSVRecord> csvRecordStream = CsvUtils.getCsvRecordStream(contentIs);
+            if (csvRecordStream.anyMatch(line -> !(spChars.matcher(line.get(0)).find()))) { //can contains only hypen
+                throw new InvalidRequestException(ErrorCodeEnum.NOT_ALLOWED_SPECIAL_CHARS.getValue());
+            }
+        }
+
+        try (ByteArrayInputStream contentIs = new ByteArrayInputStream(content)) {
+            Stream<CSVRecord> csvRecordStream = CsvUtils.getCsvRecordStream(contentIs);
+            if (csvRecordStream.anyMatch(line -> !(anyNotNumOrChars.matcher(line.get(0)).find()))) { //can contains only hypen
+                throw new InvalidRequestException(ErrorCodeEnum.ONE_OR_MORE_CODES_ARE_NOT_VALID.getValue());
             }
         }
 
@@ -193,7 +209,7 @@ public class DocumentService {
         return Arrays.stream(DocumentTypeEnum.Type.values())
                      .map(type -> filterDocumentsByPriorityAndType(type, documentEntityList))
                      .filter(t -> !Objects.isNull(t))
-                     .collect(Collectors.toList());
+                .toList();
     }
 
     private DocumentEntity filterDocumentsByPriorityAndType(DocumentTypeEnum.Type typeEnum,
@@ -258,12 +274,12 @@ public class DocumentService {
         List<String> addressList = profileEntity.getAddressList()
                                                 .stream()
                                                 .map(AddressEntity::getFullAddress)
-                                                .collect(Collectors.toList());
+                                           .toList();
 
         List<DiscountEntity> discounts = discountRepository.findByAgreementId(agreementId);
         List<RenderableDiscount> renderableDiscounts = discounts.stream()
                                                                 .map(RenderableDiscount::fromEntity)
-                                                                .collect(Collectors.toList());
+                                                                .toList();
 
         String discountMode = null;
         if (SalesChannelEnum.OFFLINE.equals(profileEntity.getSalesChannel())) {
